# vibescholar

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REMOTE-SETUP.md  benchmark.py  build_and_index.sh  index_corpus.py  pyproject.toml  query.py  server.py  vibescholar.def
tests/: conftest.py  test_db.py  test_fts5_query.py  test_index_and_retrieval.py  test_online.py  test_scholar.py  test_search_units.py  test_server.py  test_text.py  test_vectors.py
vibescholar/: __init__.py  config.py  db.py  embeddings.py  indexer.py  online.py  reranker.py  search.py  text.py  vectors.py
